[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/SolarSystem.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CelestialBody.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Camera/Camera_Controller.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Camera/Focus_Control.gd" type="Script" id=4]

[sub_resource type="SphereMesh" id=1]
radius = 127.42
height = 254.84

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0.843137, 0.231373, 1 )

[sub_resource type="SphereMesh" id=2]
radius = 34.748
height = 69.496

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.345098, 0.345098, 0.345098, 1 )

[node name="EarthMoonSystem" type="Spatial"]
script = ExtResource( 1 )

[node name="CameraContainer" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraContainer"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 320, 0, 0 )
far = 8192.0
script = ExtResource( 3 )
pivot_node_path = NodePath("../../Earth")

[node name="Earth" type="MeshInstance" parent="." groups=["celestial_bodies"]]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )
script = ExtResource( 2 )
cb_reference_point = true
cb_mass = 5.972e+19
cb_radius = 127.42

[node name="Moon" type="MeshInstance" parent="." groups=["celestial_bodies"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3844, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )
script = ExtResource( 2 )
cb_id = 1
cb_mass = 7.3e+17
cb_radius = 34.748
initial_velocity = Vector3( 0, 0, -102.2 )

[node name="Control" type="Control" parent="."]
margin_right = 309.0
margin_bottom = 195.0
script = ExtResource( 4 )

[node name="EarthButton" type="Button" parent="Control"]
margin_right = 90.0
margin_bottom = 24.0
text = "Earth"

[node name="MoonButton" type="Button" parent="Control"]
margin_top = 25.0
margin_right = 90.0
margin_bottom = 49.0
text = "Moon"
